data/derived/sp14/progs/unify/prog1691.ml.out
Characters 20-21:
  let _ = compose (+) 1;;
                      ^
Error: This expression has type int but an expression was expected of type
         'a -> int
